force-app/main/default/objects/InsurancePolicy/fields/BOR__c.field-meta.xml
<CustomField>
    <fullName>BOR__c</fullName>
    <label>BOR</label>
    <type>Date</type>
</CustomField>