force-app/main/default/objects/InsurancePolicy/fields/Bot_Formatted_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Bot_Formatted_Effective_Date__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(EffectiveDate)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(EffectiveDate)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(EffectiveDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bot Formatted Effective Date</label>
    <type>Text</type>
</CustomField>