force-app/main/default/objects/InsurancePolicy/fields/Continuous__c.field-meta.xml
<CustomField>
    <fullName>Continuous__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Policy has no expiration or renewal date and is in-force until Cancelled</inlineHelpText>
    <label>Continuous</label>
    <type>Checkbox</type>
</CustomField>