force-app/main/default/objects/InsurancePolicy/fields/DB_Days__c.field-meta.xml
<CustomField>
    <fullName>DB_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DB_Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>