force-app/main/default/objects/InsurancePolicy/fields/IA_Agency__c.field-meta.xml
<CustomField>
    <fullName>IA_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Agency)</relationshipLabel>
    <relationshipName>Insurance_Policies2</relationshipName>
    <type>Lookup</type>
</CustomField>