force-app/main/default/objects/InsurancePolicy/fields/IA_Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>IA_Agency_Commission__c</fullName>
    <label>Agency Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>