force-app/main/default/objects/InsurancePolicy/fields/IA_Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>IA_Billing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Commission Paid By Carrier</inlineHelpText>
    <label>Billing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Billing Company)</relationshipLabel>
    <relationshipName>Insurance_Policies3</relationshipName>
    <type>Lookup</type>
</CustomField>