force-app/main/default/objects/InsurancePolicy/fields/IA_Carrier__c.field-meta.xml
<CustomField>
    <fullName>IA_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Issuing Paper or Writing Company</inlineHelpText>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Carrier)</relationshipLabel>
    <relationshipName>Insurance_Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>