force-app/main/default/objects/InsurancePolicy/fields/IA_Carrier_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>IA_Carrier_Policy_ID__c</fullName>
    <label>Carrier Policy ID</label>
    <type>TextArea</type>
</CustomField>