force-app/main/default/objects/InsurancePolicy/fields/IA_Deductible__c.field-meta.xml
<CustomField>
    <fullName>IA_Deductible__c</fullName>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>