force-app/main/default/objects/InsurancePolicy/fields/IA_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IA_Expected_Revenue__c</fullName>
    <formula>vlocity_ins_fsc__MonthlyPremium__c   *  IA_Commission_Percentage__c</formula>
    <label>Estimated Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>