force-app/main/default/objects/InsurancePolicy/fields/IA_Exposure_Info_Received__c.field-meta.xml
<CustomField>
    <fullName>IA_Exposure_Info_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exposure Info Received</label>
    <type>Checkbox</type>
</CustomField>