force-app/main/default/objects/InsurancePolicy/fields/IA_Exposure_Info_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Exposure_Info_Received_Date__c</fullName>
    <label>Exposure Info Received Date</label>
    <type>Date</type>
</CustomField>