force-app/main/default/objects/InsurancePolicy/fields/IA_First_Written__c.field-meta.xml
<CustomField>
    <fullName>IA_First_Written__c</fullName>
    <label>First Written</label>
    <type>Date</type>
</CustomField>