force-app/main/default/objects/InsurancePolicy/fields/IA_Insured_Entity_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>IA_Insured_Entity_Legal_Name__c</fullName>
    <label>Insured Entity Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>