force-app/main/default/objects/InsurancePolicy/fields/IA_Intemediary__c.field-meta.xml
<CustomField>
    <fullName>IA_Intemediary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GA, MGA, or other Referring Brokerage</description>
    <inlineHelpText>GA, MGA, or other Referring Brokerage</inlineHelpText>
    <label>Intemediary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Intemediary)</relationshipLabel>
    <relationshipName>Insurance_Policies4</relationshipName>
    <type>Lookup</type>
</CustomField>