force-app/main/default/objects/InsurancePolicy/fields/IA_Issuing_Comapny__c.field-meta.xml
<CustomField>
    <fullName>IA_Issuing_Comapny__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issuing Comapny</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Issuing Comapny)</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>