force-app/main/default/objects/InsurancePolicy/fields/IA_Limit__c.field-meta.xml
<CustomField>
    <fullName>IA_Limit__c</fullName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>