force-app/main/default/objects/InsurancePolicy/fields/IA_Policy_Held_with_Other_Agency__c.field-meta.xml
<CustomField>
    <fullName>IA_Policy_Held_with_Other_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Held with Other Agency</label>
    <type>Checkbox</type>
</CustomField>