force-app/main/default/objects/InsurancePolicy/fields/IA_Proposal_Finalized__c.field-meta.xml
<CustomField>
    <fullName>IA_Proposal_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Finalized</label>
    <type>Checkbox</type>
</CustomField>