force-app/main/default/objects/InsurancePolicy/fields/IA_Proposal_Finalized_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Proposal_Finalized_Date__c</fullName>
    <label>Proposal Finalized Date</label>
    <type>Date</type>
</CustomField>