force-app/main/default/objects/InsurancePolicy/fields/IA_Remarket__c.field-meta.xml
<CustomField>
    <fullName>IA_Remarket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remarket?</label>
    <type>Checkbox</type>
</CustomField>