force-app/main/default/objects/InsurancePolicy/fields/IA_Remarket_Flag__c.field-meta.xml
<CustomField>
    <fullName>IA_Remarket_Flag__c</fullName>
    <formula>if( IA_Remarket__c = True, IMAGE(&quot;/resource/1393861834000/Flag_Red&quot;, &quot;red flag&quot;),&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remarket Flag</label>
    <type>Text</type>
</CustomField>