force-app/main/default/objects/InsurancePolicy/fields/IA_Renewal_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>IA_Renewal_Lifecycle__c</fullName>
    <formula>CASE(IA_Renewal_Status__c,

&apos;Marketing Decision&apos;, IMAGE(&quot;/resource/1393860578000/onetwentyDays&quot;, &quot;onetwenty&quot;),
&apos;Received Exposure Info&apos;, IMAGE(&quot;/resource/1393862432000/ninetyDays&quot;, &quot;ninety&quot;),
&apos;Submission Made to Carriers&apos;, IMAGE(&quot;/resource/1393860614000/sixtyDays&quot;, &quot;sixty&quot;),
&apos;Proposal Finalized&apos;, IMAGE(&quot;/resource/1393860630000/thirtyDays&quot;, &quot;thirty&quot;),
&apos;Bound&apos;, IMAGE(&quot;/resource/1393860651000/fifteenDays&quot;, &quot;fifteen&quot;),
IMAGE(&quot;/resource/1393860558000/onetwentDaysPlus&quot;, &quot;onetwentyplus&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Lifecycle</label>
    <type>Text</type>
</CustomField>