force-app/main/default/objects/InsurancePolicy/fields/IA_Renewal_Quote_Accepted__c.field-meta.xml
<CustomField>
    <fullName>IA_Renewal_Quote_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Quote Accepted</label>
    <type>Checkbox</type>
</CustomField>