force-app/main/default/objects/InsurancePolicy/fields/IA_Renewal_Quote_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Renewal_Quote_Accepted_Date__c</fullName>
    <label>Renewal Quote Accepted Date</label>
    <type>Date</type>
</CustomField>