force-app/main/default/objects/InsurancePolicy/fields/IA_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>IA_Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Decision</fullName>
            </value>
            <value>
                <fullName>Received Exposure Info</fullName>
            </value>
            <value>
                <fullName>Submission Made to Carriers</fullName>
            </value>
            <value>
                <fullName>Proposal Finalized</fullName>
            </value>
            <value>
                <fullName>Bound</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Non-Renewed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>