force-app/main/default/objects/InsurancePolicy/fields/IA_Renewal_Strategy_Meeting__c.field-meta.xml
<CustomField>
    <fullName>IA_Renewal_Strategy_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Strategy Meeting</label>
    <type>Checkbox</type>
</CustomField>