force-app/main/default/objects/InsurancePolicy/fields/IA_Renewal_Strategy_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Renewal_Strategy_Meeting_Date__c</fullName>
    <label>Renewal Strategy Meeting Date</label>
    <type>Date</type>
</CustomField>