force-app/main/default/objects/InsurancePolicy/fields/IA_Service_Lead__c.field-meta.xml
<CustomField>
    <fullName>IA_Service_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>