force-app/main/default/objects/InsurancePolicy/fields/IA_Submission_to_Carriers__c.field-meta.xml
<CustomField>
    <fullName>IA_Submission_to_Carriers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submission to Carriers</label>
    <type>Checkbox</type>
</CustomField>