force-app/main/default/objects/InsurancePolicy/fields/IA_Submission_to_Carriers_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Submission_to_Carriers_Date__c</fullName>
    <label>Submission to Carriers Date</label>
    <type>Date</type>
</CustomField>