force-app/main/default/objects/InsurancePolicy/fields/INS_Policy_Term__c.field-meta.xml
<CustomField>
    <fullName>INS_Policy_Term__c</fullName>
    <formula>TEXT(
ROUND((NULLVALUE(ExpirationDate,NOW()) - NULLVALUE(EffectiveDate,NOW())),1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Term</label>
    <type>Text</type>
</CustomField>