force-app/main/default/objects/InsurancePolicy/fields/INS_Policy_Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>INS_Policy_Type_Icon__c</fullName>
    <formula>IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &quot;resource/INS_PolicyTypes/&quot; + SUBSTITUTE(TEXT(PolicyType), &quot; &quot;, &quot;_&quot;) + &quot;.png&quot;, TEXT(PolicyType))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Type Icon</label>
    <type>Text</type>
</CustomField>