force-app/main/default/objects/InsurancePolicy/fields/Line_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Coverage__c</fullName>
    <label>Line of Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Life_ADD</fullName>
                <label>Life and AD&amp;D</label>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Stop Loss</fullName>
            </value>
            <value>
                <fullName>Employee Assistance/Perks</fullName>
            </value>
            <value>
                <fullName>Fee for Service</fullName>
            </value>
            <value>
                <fullName>Business Travel Accident</fullName>
            </value>
            <value>
                <fullName>Commercial Monoline</fullName>
            </value>
            <value>
                <fullName>Commercial Package</fullName>
            </value>
            <value>
                <fullName>Commercial D&amp;O</fullName>
            </value>
            <value>
                <fullName>Personal Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>