force-app/main/default/objects/InsurancePolicy/fields/Policy_Alert__c.field-meta.xml
<CustomField>
    <fullName>Policy_Alert__c</fullName>
    <description>short text string that would show up in policy info on chatbot</description>
    <label>Policy Alert</label>
    <length>128</length>
    <type>Text</type>
</CustomField>