force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__AttributesSelectedValues__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__AttributesSelectedValues__c</fullName>
    <label>Attributes Selected Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>