force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__OriginalEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__OriginalEffectiveDate__c</fullName>
    <description>DEPRECATED. Please use OriginalEffectiveDate.</description>
    <label>Original Effective Date</label>
    <type>DateTime</type>
</CustomField>