force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__OriginalPolicyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__OriginalPolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. Please use OriginalPolicyId.</description>
    <label>Original Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>OriginalPolicies</relationshipName>
    <type>Lookup</type>
</CustomField>