force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__PaidToDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__PaidToDate__c</fullName>
    <description>DEPRECATED. Please use PaidToDate.</description>
    <label>Policy Paid To Date</label>
    <type>Date</type>
</CustomField>