force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ProductCode__c</fullName>
    <formula>Product.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>