force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__TotalFeeForTerm__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__TotalFeeForTerm__c</fullName>
    <description>DEPRECATED. Please use TermFeeAmount.</description>
    <label>Total Fee for Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>