force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__TotalPremiumForTerm__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__TotalPremiumForTerm__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DEPRECATED. Please use TermPremiumAmount.</description>
    <label>Total Premium For Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>