force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__TotalSumInsured__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__TotalSumInsured__c</fullName>
    <description>DEPRECATED. Please use TotalSumInsured.</description>
    <label>Total Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>