force-app/main/default/objects/InsurancePolicy/recordTypes/Commercial_Lines.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Lines</fullName>
    <active>true</active>
    <description>Commercial Insurance policies for Accounts</description>
    <label>Commercial Lines</label>
</RecordType>