force-app/main/default/objects/InsurancePolicy/recordTypes/IA_Commercial_Policy.recordType-meta.xml
<RecordType>
    <fullName>IA_Commercial_Policy</fullName>
    <active>true</active>
    <description>Summer 2020 Insurance IDO Refresh</description>
    <label>IA Commercial Policy</label>
</RecordType>