force-app/main/default/objects/InsurancePolicy/recordTypes/IA_Group_Benefits.recordType-meta.xml
<RecordType>
    <fullName>IA_Group_Benefits</fullName>
    <active>true</active>
    <description>Record Type for Group Benefits Plans</description>
    <label>IA Group Benefits</label>
</RecordType>