force-app/main/default/objects/InsurancePolicy/recordTypes/IA_Personal_Policy.recordType-meta.xml
<RecordType>
    <fullName>IA_Personal_Policy</fullName>
    <active>true</active>
    <description>Summer 2020 Insurance IDO Refresh</description>
    <label>IA Personal Policy</label>
</RecordType>