force-app/main/default/objects/InsurancePolicy/recordTypes/Life_Annuities.recordType-meta.xml
<RecordType>
    <fullName>Life_Annuities</fullName>
    <active>true</active>
    <description>Life Insurance and Annuities Coverage Types</description>
    <label>Life &amp; Annuities</label>
</RecordType>