force-app/main/default/objects/InsurancePolicy/recordTypes/Personal_Lines.recordType-meta.xml
<RecordType>
    <fullName>Personal_Lines</fullName>
    <active>true</active>
    <description>Personal Insurance Policies for Persons and Households.</description>
    <label>Personal Lines</label>
</RecordType>