force-app/main/default/objects/InsurancePolicy/listViews/All_InsurancePolicies.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicies</fullName>
    <columns>NameInsured</columns>
    <columns>IA_Carrier__c</columns>
    <columns>PolicyType</columns>
    <columns>Bot_Formatted_Effective_Date__c</columns>
    <columns>Bot_Formatted_Expiration_Date__c</columns>
    <columns>RenewalDate</columns>
    <columns>Name</columns>
    <columns>PolicyName</columns>
    <columns>IA_Service_Lead__c</columns>
    <columns>Producer</columns>
    <columns>Status</columns>
    <columns>RecordType</columns>
    <columns>PlanType</columns>
    <columns>Line_of_Coverage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Insurance Policies</label>
</ListView>