force-app/main/default/objects/InsurancePolicy/listViews/EB_Insurance_Policies.listView-meta.xml
<ListView>
    <fullName>EB_Insurance_Policies</fullName>
    <columns>NameInsured</columns>
    <columns>PlanType</columns>
    <columns>Funding__c</columns>
    <columns>IA_Carrier__c</columns>
    <columns>IA_Billing_Company__c</columns>
    <columns>EffectiveDate</columns>
    <columns>RenewalDate</columns>
    <columns>IA_Renewal_Status__c</columns>
    <columns>Name</columns>
    <columns>PolicyName</columns>
    <columns>Producer</columns>
    <columns>IA_Service_Lead__c</columns>
    <columns>Status</columns>
    <columns>vlocity_ins_fsc__MonthlyPremium__c</columns>
    <columns>IA_Commission_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>InsurancePolicy.IA_Group_Benefits</value>
    </filters>
    <label>EB Insurance Policies</label>
</ListView>